changes to pom booking

--- a/booking-service/pom.xml
+++ b/booking-service/pom.xml
@@ -62,6 +62,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        
+        <!--Load balencer-->
+		<!-- Spring Cloud LoadBalancer -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+		</dependency>
 
         <!-- Lombok -->
         <dependency>
