--- a/booking-service/pom.xml
+++ b/booking-service/pom.xml
@@ -70,6 +70,24 @@
 		    <artifactId>spring-cloud-starter-loadbalancer</artifactId>
 		</dependency>
 
+<!-- Spring Cloud Circuit Breaker + Resilience4j -->
+<dependency>
+  <groupId>org.springframework.cloud</groupId>
+  <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+</dependency>
+
+<!-- Optional: direct Resilience4j Spring Boot 3 starter (metrics & extras) -->
+<dependency>
+  <groupId>io.github.resilience4j</groupId>
+  <artifactId>resilience4j-spring-boot3</artifactId>
+</dependency>
+
+<!-- AOP required for annotation-driven behavior -->
+<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-aop</artifactId>
+</dependency>
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
